<resources>
    <string name="app_name">Lock Me</string>
    <string name="unlock_instructions">Slide to unlock</string>
    <string name="unlock_locked">Locked</string>
    <string name="unlock_unlocked">Unlocked</string>
    <string name="unlock_thumb">Move this thumb</string>
    <string name="permission_accessibility_setting_description">"Turn on and it locks all soft key including HOME, RECENTS, BACK, MENU buttons.

You may be warned about potential privacy risk, that's just a regular informative warning for any accessibility service. We promise NEVER EVER collecting your personal information in this accessibility service."</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="pattern_lock">Pattern Lock</string>
    <string name="pin_lock">Pin Lock</string>
    <string name="action_close">Dismiss</string>
    <string name="pin_enabled">Pin Enabled</string>
    <string name="pattern_enabled">Pattern Enabled</string>
    <string name="pattern_failed">Pattern Lock Failed</string>
    <string name="pin_failed">Pin Lock Failed</string>
    <string name="clear_lock">Clear Pin And Pattern</string>
    <string name="pin_cleared">Pin and Pattern lock has been removed</string>
    <string name="ok">continue</string>
    <string name="cancel">Cancel</string>
    <string name="pin_pattern_will_be_empty">Remove Pin and Pattern lock completely</string>
    <string name="delete_pin_pattern">Delete Pin/Pattern</string>
    <string name="enter_pattern_to_unlock">Enter Pattern To Unlock</string>
    <string name="create_pattern">Create Pattern</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">Cancel</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.</string>
    <string name="enable">Enable</string>
    <string name="change">Change</string>
    <string name="check">Disable Pin</string>
    <string name="pin_set_up">Pin Setup</string>
</resources>
